--- a/ui.html
+++ b/ui.html
@@ -3,11 +3,9 @@
 
 <head>
   <title>Pictionary</title>
-</head>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
+  <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <!-- Popper.JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
   integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
@@ -18,11 +16,15 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/ui.css" type="text/css" />
-
+</head>
 <body>
     <nav id="sidebar">
       <div class="sidebar-header">
+        <button type="button" class="btn btn-primary btn-sm" style = "float: right;" id = "scaleset">
+          <img src="/img/gear.png" style = "filter: invert(1);" width="20" height="20" alt="submit"/>
+        </button>
         <h3>Simple Pictionary</h3>
+        
       </div>
 
       <ul class="list-unstyled components">
@@ -51,7 +53,7 @@
       </ul>
     </nav>
       <div id = "drawpanel">
-      <canvas id="canvas" width="1000" height="800"></canvas>
+      <canvas id="canvas" width="1000" height="700"></canvas>
     </div>
       <div id="chatpanel">
         
@@ -62,8 +64,6 @@
           <input id="m" class="form-control" autocomplete="off" style="font-size:16pt; width:98%" />
         </div>
       </div>
-
-    <div> Your word is: <span id="wordlabel"></span></div>
     <div class="modal fade" id="enterName" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -119,7 +119,31 @@
             Someone else is currently drawing. You can pick a word to draw if you guess what they are drawing first.
           </div>
         </div>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="setscale" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Set scale (if brush is not centered due to window/browser zoom). You can also try adjusting your browser zoom with CTRL + (+) and CTRL + (-).</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="input-group mb-3">
+            <input type="range" class="custom-range" id="zoomslider" min="50" max="150" value="100">
+            <div id = "curvalue"> 1.00 </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
   </div>
