--- a/ui.html
+++ b/ui.html
@@ -29,10 +29,10 @@
 
       <ul class="list-unstyled components">
         <li>
-          <p>Currently drawing: </p>
+          <p>Currently drawing: <span id = "drawer"></span> </p>
         </li>
         <li>
-          <p>Your word: </p>
+          <p>Your word: <span id = "currentword"></span></p>
         </li>
         <li>
           <a id="pickword">Pick Word</a>
