--- a/ui.html
+++ b/ui.html
@@ -61,7 +61,7 @@
         <div id="chatcontent">
         </div>
         <div id="chatcontrol">
-          <input id="m" class="form-control" autocomplete="off" style="font-size:16pt; width:98%" />
+          <input id="m" class="form-control" autocomplete="off"/>
         </div>
       </div>
     <div class="modal fade" id="enterName" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
