--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src="js/client.js"></script>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/ui.css" type="text/css" />
+<link rel="stylesheet" href="/css/index.css" type="text/css" />
 </head>
 <body>
     <nav id="sidebar">
